<resources>
    <string name="app_name">T1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="priority">Priority</string>
    <string name="status">Status</string>
    <string name="board">Board</string>
    <string name="create">Create</string>
    <string name="daily">Daily</string>
    <string name="date_to_date">%1$s - %2$s</string>
</resources>