<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5f3ff8"
        tools:context=".ui.feature.home.task.CreateOrEditTaskFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_common" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/defaultMargin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_description"
            app:shapeAppearance="@style/ShapeAppearance.TopRadiusCard">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_daily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/defaultMargin"
                        android:text="@string/daily"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_start_date"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/defaultMargin"
                        android:layout_marginEnd="@dimen/smallMargin"
                        android:hint="@string/start_date"
                        app:layout_constraintEnd_toStartOf="@id/icon_indicator"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/switch_daily">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_start_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_end_date"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/smallMargin"
                        android:layout_marginEnd="@dimen/defaultMargin"
                        android:hint="@string/end_date"
                        app:layout_constraintBottom_toBottomOf="@id/input_start_date"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon_indicator"
                        app:layout_constraintTop_toTopOf="@id/input_start_date">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_end_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_start_time"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/defaultMargin"
                        android:layout_marginEnd="@dimen/smallMargin"
                        android:hint="@string/start_time"
                        app:layout_constraintBottom_toBottomOf="@id/input_end_time"
                        app:layout_constraintEnd_toStartOf="@id/icon_indicator"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/input_end_time">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_start_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_end_time"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/smallMargin"
                        android:layout_marginEnd="@dimen/defaultMargin"
                        android:hint="@string/end_time"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon_indicator"
                        app:layout_constraintTop_toBottomOf="@id/input_end_date">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_end_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon_indicator"
                        android:layout_width="@dimen/defaultButtonSize"
                        android:layout_height="@dimen/defaultButtonSize"
                        app:layout_constraintBottom_toBottomOf="@id/input_start_time"
                        app:layout_constraintEnd_toStartOf="@id/input_end_date"
                        app:layout_constraintStart_toEndOf="@id/input_start_date"
                        app:layout_constraintTop_toTopOf="@id/input_start_date"
                        app:srcCompat="@drawable/ic_time_indicator" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_priority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/largeMargin"
                        android:text="@string/priority"
                        app:layout_constraintStart_toStartOf="@id/input_start_date"
                        app:layout_constraintTop_toBottomOf="@id/input_end_time" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_priority"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/smallMargin"
                        app:layout_constraintEnd_toEndOf="@id/input_end_time"
                        app:layout_constraintStart_toStartOf="@id/input_start_date"
                        app:layout_constraintTop_toBottomOf="@id/text_priority" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        app:layout_constraintBottom_toBottomOf="@id/spinner_status"
                        app:layout_constraintStart_toStartOf="@id/text_priority"
                        app:layout_constraintTop_toTopOf="@id/spinner_status" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/largeMargin"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/recycler_priority" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_board"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/largeMargin"
                        android:text="@string/board"
                        app:layout_constraintStart_toStartOf="@id/text_status"
                        app:layout_constraintTop_toBottomOf="@id/spinner_status" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_board"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/smallMargin"
                        app:layout_constraintBottom_toTopOf="@id/layout_color_selection"
                        app:layout_constraintEnd_toEndOf="@id/spinner_status"
                        app:layout_constraintStart_toStartOf="@id/text_board"
                        app:layout_constraintTop_toBottomOf="@id/text_board" />

                    <include
                        android:id="@+id/layout_color_selection"
                        layout="@layout/layout_color_selection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/button_create"
                        app:layout_constraintTop_toBottomOf="@id/recycler_board" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_create"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/create"
                        android:textAllCaps="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/recycler_board"
                        app:layout_constraintStart_toStartOf="@id/recycler_board"
                        app:layout_constraintTop_toBottomOf="@id/layout_color_selection"
                        app:shapeAppearance="@style/ShapeAppearance.RoundedButton" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>