<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFD89E"
    app:shapeAppearance="@style/ShapeAppearance.LeafCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_indicator"
            android:layout_width="@dimen/dimen_3adp"
            android:layout_height="@dimen/dimen_30adp"
            android:background="@drawable/background_rounded"
            app:layout_constraintBottom_toBottomOf="@id/text_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_indicator"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="@id/text_title"
            app:layout_constraintStart_toStartOf="@id/text_title"
            app:layout_constraintTop_toBottomOf="@id/text_title" />


        <include
            android:id="@+id/layout_priority"
            layout="@layout/item_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeMargin"
            app:layout_constraintEnd_toStartOf="@id/layout_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_description" />

        <include
            android:id="@+id/layout_status"
            layout="@layout/item_spinner_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/layout_priority"
            app:layout_constraintEnd_toStartOf="@id/text_start_time"
            app:layout_constraintStart_toEndOf="@id/layout_priority"
            app:layout_constraintTop_toTopOf="@id/layout_priority" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            app:layout_constraintBottom_toBottomOf="@id/layout_priority"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layout_status"
            app:layout_constraintTop_toTopOf="@id/layout_priority" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>